@@ -5110,7 +5110,6 @@ users redefine the latter macro.
 
 
 \<html32\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % html32.4ht (|version), generated from |jobname.tex
 % Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) |CopyYear.1997. Eitan M. Gurari
